--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
     <textarea name="new-comment" name="new-comment" id="new-comment"></textarea>
     <input type="submit" id='submit-button' value="Create" />
   </form>
+  
+  <form id="edit-ramen">
+    <h4>Update the Featured Ramen</h4>
+    <label for="edit-rating">Rating: </label>
+    <input type="number" name="rating" id="edit-rating" />
+    <label for="edit-comment">Comment: </label>
+    <textarea name="new-comment" id="edit-comment"></textarea>
+    <input type="submit" value="Update" />
+  </form>
 
 </body>
 
