--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <div id="ramen-detail">
     <img class="detail-image" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
-    <h2 class="name">Insert Name Here</h2>
-    <h3 class="restaurant">Insert Restaurant Here</h3>
+    <h2 class="name">Click image to see name</h2>
+    <h3 class="restaurant">click image to see restaurant</h3>
   </div>
 
   <h3>Rating:</h3>
